Added a regular check for ophan php-cgi processes left around by Apache restarts on some systems, and kill any found.
Added an option to the scheduled backup page to only send an email report when the backup fails, and an option to send email to domain owners as well.
When a virtual server with anonymous FTP is created, the ProFTPd user (typically ftp) is added to the domain's Unix group. This allows anonymous FTP to work even when the domain's home directory is not world-readable.
Added checkboxes to the mail log search form to exclude spam and viruses from the results.
Added a search box to the list of scripts, to more easily find the one you want in the current huge list.
Added script installers for the Bugzilla, Flyspray and Mantis issue trackers.
Script installers that require Perl modules will now automatically install them, if possible.
Added a Module Config setting for the number of days of processed mail logs to keep, implemented an index cache file to speed up searches, and created a Cron job to periodically update the logs.
Added a Cron job to periodically update per-domain SpamAssassin config files from the global configuration, so that configs added by a SpamAssassin upgrade are not missing from the per-domain directories.
---- Changes since 3.40 ----
Added a new template section for defining your own PHP wrapper scripts, for use when PHP is run via CGI or FastCGI.
When a virtual server with a private IP is added, ping is now used to check if the IP is already in use.
Updated the Flyspray script installer to version 0.9.9.2, and phpPgAdmin to 4.1.2.
In the server templates pages under Default domain owner limits, added a section for specifying the features that can be used by the server owner. Previously, these were always automatically determined based on the features initially enabled when the domain was created.
Added additional warning when deleting scripts from ~/public_html.
Website validation now includes a check for PHP wrapper scripts.