@@ -147,3 +147,4 @@ stats_pass=1
 quota_commands=0
 key_size=1024
 maillog_period=30
+dns_check=1
