@@ -24,6 +24,7 @@ iface_base=Base number for virtual interfaces,3,Automatic
 defip=Default virtual server IP address,3,From network interface
 iface_manual=Bring up virtual interfaces?,1,0-Yes,1-No
 dns_ip=Default IP address for DNS records,3,Same as virtual server IP
+dns_check=Check resolv.conf for this system?,1,1-Yes,0-No
 disable=Features to deactivate when disabling,13,unix-Administration user (lock account),mail-Mail (stop accepting email for domain),web-Website (replace site with error page),dns-DNS (stop serving domain),mysql-MySQL (disallow login by MySQL user),postgres-PostgreSQL (disallow login by PostgreSQL user),ftp-ProFTPD (deny access)
 delete_indom=Delete all Apache virtual hosts in domain when deleting?,1,1-Yes,0-No
 ldap=Store users and groups,1,1-In LDAP database,0-In local files
