@@ -642,3 +642,4 @@ Updated the Flyspray script installer to version 0.9.9.2, and phpPgAdmin to 4.1.
 In the server templates pages under Default domain owner limits, added a section for specifying the features that can be used by the server owner. Previously, these were always automatically determined based on the features initially enabled when the domain was created.
 Added additional warning when deleting scripts from ~/public_html.
 Website validation now includes a check for PHP wrapper scripts.
+Added a Module Config option to make the DNS client configuration check optional.
